--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,7 @@
     -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 
@@ -34,7 +34,7 @@
         <button onclick="fetchGeneration(9)">Generation 9. Paldea</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="Script1.js"></script>
 </body>
 
 </html>
