--- a/index2.html
+++ b/index2.html
@@ -6,16 +6,26 @@
 -->
 <!DOCTYPE html>
 <html>
+
 <head>
+    <title>Pokemons</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
+
 <body>
     <!-- Start-knapper: Fight åbner en anden side, Login åbner login-panelet -->
     <div class="start-buttons" id="start-buttons">
-        <a href="\index.html" target="_blank"><img src="https://github.com/Lpopp30/ApiPokemon/blob/main/original-dbe29920e290da99d214598ac9e2001f.jpg?raw=true" alt="Pokeball" id="fightButton"></a>
-        <a onclick="openLogin()"><img src="https://github.com/Lpopp30/ApiPokemon/blob/main/original-dbe29920e290da99d214598ac9e2001f.jpg?raw=true" alt="Pokeball" id="loginButton"></a>
+        <a href="C:Users/JF/source/repos/pokeapiSamlet/index.html" target="_blank">
+            <img src="https://github.com/Lpopp30/ApiPokemon/blob/main/original-dbe29920e290da99d214598ac9e2001f.jpg?raw=true"
+                 alt="Pokeball" id="fightButton"></a>
+        <a onclick="openLogin()">
+            <img src="https://github.com/Lpopp30/ApiPokemon/blob/main/original-dbe29920e290da99d214598ac9e2001f.jpg?raw=true"
+                 alt="Pokeball" id="loginButton">
+        </a>
+        <p class="textInBall" id="fightInBall">Fight</p>
+        <p class="textInBall" id="loginInBall">Login</p>
     </div>
     <div class="login" id="login">
         <h1>Login</h1>
@@ -25,8 +35,14 @@
             <input type="text" id="userName" name="userName"><br>
             <label for="password">Password</label><br>
             <input type="password" id="password" name="password"><br>
-            <button type="button" onclick="loginData(userName, password, 'Login')" name="login" value="login">Login</button>
-            <button type="button" onclick="loginData(userName, password, 'Register')" name="register" value="register">Register</button>
+            <button type="button" onclick="loginData(userName, password, 'Login')" name="login"
+                    value="login">
+                Login
+            </button>
+            <button type="button" onclick="loginData(userName, password, 'Register')" name="register"
+                    value="register">
+                Register
+            </button>
         </form>
     </div>
 
@@ -92,8 +108,8 @@
             <p id="1typePokemon"></p>
         </div>
     </div>
-
-    <script src="script.js"></script>
+    
+    <script src="Script1.js"></script>
 </body>
 
 </html>
