--- a/index3.html
+++ b/index3.html
@@ -18,8 +18,10 @@
     <div id="myDropdown" class="dropdown-content">
     </div>
 
-    <div id="teamPlace" class="team"></div>
+    <div id="teamPlace" class="team">
 
+        <button class="teamFightButton" onclick="teamFight()">Fight with Team</button>
+  </div>
 
     <div id="starter-Pokemon" class="starter-Pokemons">
         <p>Choose a generation to pick a starter pokemon from</p>
