--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Start-knapper: Fight åbner en anden side, Login åbner login-panelet -->
     <div class="start-buttons" id="start-buttons">
-        <a href="C:Users/JF/source/repos/pokeapiSamlet/index.html" target="_blank">
+        <a href="/index.html" target="_blank">
             <img src="https://github.com/Lpopp30/ApiPokemon/blob/main/original-dbe29920e290da99d214598ac9e2001f.jpg?raw=true"
                  alt="Pokeball" id="fightButton"></a>
         <a onclick="openLogin()">
