--- a/index3.html
+++ b/index3.html
@@ -20,7 +20,7 @@
 
     <div id="teamPlace" class="team">
 
-        <button class="teamFightButton" onclick="teamFight()">Fight with Team</button>
+        <button class="teamFightButton" onclick="userTeam()">Fight with Team</button>
   </div>
 
     <div id="starter-Pokemon" class="starter-Pokemons">
